[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tmux-poke"
dynamic = ["version"]
description = "Schedule text plus Enter into an existing tmux session."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Ivan" },
]
keywords = ["tmux", "cli", "terminal", "automation"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
tmux-poke = "tmux_poke:main"

[project.urls]
Homepage = "https://github.com/ivanzoid/tmux-poke"
Repository = "https://github.com/ivanzoid/tmux-poke"

[tool.setuptools]
py-modules = ["tmux_poke"]

[tool.setuptools.dynamic]
version = { attr = "tmux_poke.VERSION" }
